--- a/Intro_To_Optimization.ipynb
+++ b/Intro_To_Optimization.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "\n",
     "\n",
-    "# Introduction to Optimization\n"
+    "# Introduction to Optimization for Decision Making\n"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "id": "869a5ade-2e6f-4ccd-8fd6-b4f276cff22f",
    "metadata": {},
    "source": [
-    "# Part 1: Solving the Problem"
+    "# Part 1: Maximization/Minimization "
    ]
   },
   {
@@ -44,6 +44,17 @@
    "source": [
     "Please, go to your _environment_ in Anacoda Navigator to install **glpk** and **pulp**  before runing the codes below.\n",
     "Then, call the library:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2e3d99-7100-4941-aad8-57b178798e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip show glpk pulp\n",
+    "# pip install glpk pulp"
    ]
   },
   {
@@ -180,20 +191,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "531d75fa-6e19-4ef4-9170-31aef8b88fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solver_list = pp.listSolvers()\n",
+    "print(solver_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "636442d1-a48c-4a3a-a84d-9f2312f3d473",
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = pp.COIN_CMD(msg=False)\n",
-    "result=model.solve(solver)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54053ca1-f45e-4ae8-927e-a6b6cfc9a9e4",
-   "metadata": {},
-   "source": [
-    "# Part 2: Seeing optimal solution"
+    "solverToUse = pp.COIN_CMD(msg=False)\n",
+    "model.solve(solver=solverToUse);"
    ]
   },
   {
@@ -216,6 +230,17 @@
     "Results={\"Model Status\":pp.LpStatus[model.status]}\n",
     "Results.update({\"Optimal Solution\":pp.value(model.objective)})\n",
     "Results.update({v.name: v.varValue for v in model.variables()})\n",
+    "Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651fadcc-cb30-4caa-98e4-f6215c0be7a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#or\n",
     "pd.DataFrame.from_dict(Results,orient='index').T.set_index('Model Status').style.format('{:,}')"
    ]
   },
@@ -231,32 +256,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a7e1cb7a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vTSq9X74urGAB_5n_MIJ9ZGIboKSvBdokVTBXVLh_qqZnmLRTJioOF431Rzys3Qi9UaFwWXjeq6Wmd5/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vTSq9X74urGAB_5n_MIJ9ZGIboKSvBdokVTBXVLh_qqZnmLRTJioOF431Rzys3Qi9UaFwWXjeq6Wmd5/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2478f1d7-aa1c-4e6c-b404-d7faf01ab371",
+   "metadata": {},
+   "source": [
+    "# Part 2: Multicriteria Decision-Making"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc350ccb-40b9-4dd0-8482-d7842a7321d6",
+   "id": "4bf5038e-daec-4f81-a2dd-afe31322f7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vR7GL_wF1eKRO0JgEUyIx5cxXUhTQ8ZM4F3AE1MLr7GYG33dwEobrLo6O2MaV2d7Cv47TaTgHghkhrV/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fc00fca3-dda9-4d50-85ce-0c2ef7b38526",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5809ff85-e615-4bbb-bcd2-52527b788b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this in the folder\n",
+    "from ahp.ahp import AHP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a808bc02-e456-46d7-bab0-ff357ac965c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pairwise_age=pd.read_excel(\"ahp_tables.xlsx\",sheet_name='age', index_col=0)\n",
+    "pairwise_experience=pd.read_excel(\"ahp_tables.xlsx\",sheet_name='experience', index_col=0)\n",
+    "pairwise_education=pd.read_excel(\"ahp_tables.xlsx\",sheet_name='education', index_col=0)\n",
+    "pairwise_charisma=pd.read_excel(\"ahp_tables.xlsx\",sheet_name='charisma', index_col=0)\n",
+    "pairwise_criteria=pd.read_excel(\"ahp_tables.xlsx\",sheet_name='criteria', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "aafb3e8b-151c-457c-b8e0-4d74c8c6d062",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Charisma</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Experience</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Education</th>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Charisma</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Experience  Education  Charisma  Age\n",
+       "Experience    1.000000   4.000000  3.000000    7\n",
+       "Education     0.250000   1.000000  0.333333    3\n",
+       "Charisma      0.333333   3.000000  1.000000    5\n",
+       "Age           0.142857   0.333333  0.200000    1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairwise_criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ead9dd7f-2dfb-4dd0-8edc-b9ff93f8fcce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# follow the same order as the criteria\n",
+    "data = [pairwise_experience.values.tolist(),\n",
+    "        pairwise_education.values.tolist(),\n",
+    "        pairwise_charisma.values.tolist(),\n",
+    "        pairwise_age.values.tolist(),\n",
+    "        pairwise_criteria.values.tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ebca576b-58a1-4215-a4ec-068843954724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instanciando o modelo\n",
+    "ahp = AHP()\n",
+    "\n",
+    "# alimentando o modelo com os dados\n",
+    "ahp.fit(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9ea4b19b-0975-4193-9034-d48fe7028c40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Ranking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Tom</th>\n",
+       "      <td>0.359067</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dick</th>\n",
+       "      <td>0.488307</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Harry</th>\n",
+       "      <td>0.152626</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Score  Ranking\n",
+       "Tom    0.359067      2.0\n",
+       "Dick   0.488307      1.0\n",
+       "Harry  0.152626      3.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution=pd.DataFrame(index=pairwise_charisma.index)\n",
+    "Solution['Score']=ahp.classificate()\n",
+    "Solution['Ranking']=Solution.Score.rank(ascending=False)\n",
+    "Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7897a279-e9c1-4aa3-9459-310e03647083",
    "metadata": {},
    "outputs": [],
    "source": []
