--- a/Intro_To_Optimization.ipynb
+++ b/Intro_To_Optimization.ipynb
@@ -285,27 +285,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "fc00fca3-dda9-4d50-85ce-0c2ef7b38526",
+   "cell_type": "markdown",
+   "id": "5cd22b7e-4d31-4cea-8cf1-81c2956c4395",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5809ff85-e615-4bbb-bcd2-52527b788b5a",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# this in the folder\n",
-    "from ahp.ahp import AHP"
+    "The following code requires the folder **ahp**, which you have to download from [here](https://github.com/gprzy/ahp), or from [here](https://github.com/SocialAnalytics-StrategicIntelligence/introOptimization/raw/main/ahp.zip). Make sure the folder with the two **.py** files are in this notebook. You need pandas and numpy previously installed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "5809ff85-e615-4bbb-bcd2-52527b788b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calling the function\n",
+    "from ahp.ahp import AHP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a2cc6c1-0814-4919-add2-25b566d18cdb",
+   "metadata": {},
+   "source": [
+    "I have previously prepared the pairwise comparisons:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a808bc02-e456-46d7-bab0-ff357ac965c7",
    "metadata": {},
    "outputs": [],
@@ -320,91 +328,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d954d8f-9a42-4468-987a-f583338a3908",
+   "metadata": {},
+   "source": [
+    "Open the *pairwise_criteria* to check the order of columns:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aafb3e8b-151c-457c-b8e0-4d74c8c6d062",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Experience</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>Charisma</th>\n",
-       "      <th>Age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Experience</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Education</th>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Charisma</th>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Experience  Education  Charisma  Age\n",
-       "Experience    1.000000   4.000000  3.000000    7\n",
-       "Education     0.250000   1.000000  0.333333    3\n",
-       "Charisma      0.333333   3.000000  1.000000    5\n",
-       "Age           0.142857   0.333333  0.200000    1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pairwise_criteria"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5b02c89-4d89-4b34-ac6d-879421b6a976",
+   "metadata": {},
+   "source": [
+    "Use the same order here:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ead9dd7f-2dfb-4dd0-8edc-b9ff93f8fcce",
    "metadata": {},
    "outputs": [],
@@ -418,82 +369,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ebca576b-58a1-4215-a4ec-068843954724",
+   "cell_type": "markdown",
+   "id": "81e7e73e-4ebc-4958-a4f6-31414c3a0e12",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# instanciando o modelo\n",
-    "ahp = AHP()\n",
-    "\n",
-    "# alimentando o modelo com os dados\n",
-    "ahp.fit(data)"
+    "Time to fit the AHP model:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "ebca576b-58a1-4215-a4ec-068843954724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ahp = AHP()\n",
+    "ahp.fit(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bba95f32-6e88-4662-a570-8f3bcb67e6ee",
+   "metadata": {},
+   "source": [
+    "You get the solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9ea4b19b-0975-4193-9034-d48fe7028c40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Ranking</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Tom</th>\n",
-       "      <td>0.359067</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dick</th>\n",
-       "      <td>0.488307</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Harry</th>\n",
-       "      <td>0.152626</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Score  Ranking\n",
-       "Tom    0.359067      2.0\n",
-       "Dick   0.488307      1.0\n",
-       "Harry  0.152626      3.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Solution=pd.DataFrame(index=pairwise_charisma.index)\n",
     "Solution['Score']=ahp.classificate()\n",
