--- a/Intro_To_Optimization.ipynb
+++ b/Intro_To_Optimization.ipynb
@@ -10,7 +10,9 @@
     "_____\n",
     "<a id='home'></a>\n",
     "\n",
-    "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/SocialAnalytics-StrategicIntelligence/introOptimization/blob/main/Intro_To_Optimization.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
     "\n",
     "\n",
     "# Introduction to Optimization for Decision Making\n"
