--- a/Intro_To_Optimization.ipynb
+++ b/Intro_To_Optimization.ipynb
@@ -411,9 +411,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b50bc5f6-7d5d-4a90-bf30-ec0cd2e9aaac",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert-success\">\n",
+    "\n",
+    "<strong>Exercise: Choosing a country for a Master Program</strong> \n",
+    "\n",
+    "- Join 3 or 4 people from this course (or other friends if needed).\n",
+    "- If you have the criteria: cost of living, language difficulty, possibilities to get a job in that country\n",
+    "- If you have the alternatives: Brazil, Spain, USA, England, France\n",
+    "- Create an AHP model and get the ranking.\n",
+    "\n",
+    "You can follow this [example](https://en.wikipedia.org/wiki/Analytic_hierarchy_process_%E2%80%93_leader_example).\n",
+    "If you have a better idea, you can use it instead."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7897a279-e9c1-4aa3-9459-310e03647083",
+   "id": "c6a73683-487e-4304-b465-c3d1c509999f",
    "metadata": {},
    "outputs": [],
    "source": []
