--- a/Intro_To_Optimization.ipynb
+++ b/Intro_To_Optimization.ipynb
@@ -269,6 +269,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "133cfdf8-a6f4-418b-83dd-785735310f65",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert-success\">\n",
+    "\n",
+    "<strong>Exercise: The scheduling problem</strong> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13f944ca-ef56-46e8-88f7-2b08141c2208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vQtBRpIr6Hx1_T0zJ3_DRqsE82YUjx7ZkeEKLdA64fbjtjkmc6Ibf6ebzp6CY69D482IGpG2h9GcsC5/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"960\" height=\"569\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2478f1d7-aa1c-4e6c-b404-d7faf01ab371",
    "metadata": {},
    "source": [
@@ -577,183 +598,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "908e917e-bed6-488b-9a6b-dafbe5f6d1e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>Aircraft</th>\n",
-       "      <th>Fuel</th>\n",
-       "      <th>Employee</th>\n",
-       "      <th>Passenger</th>\n",
-       "      <th>Freight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>109</td>\n",
-       "      <td>392</td>\n",
-       "      <td>8259</td>\n",
-       "      <td>23756</td>\n",
-       "      <td>870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>B</td>\n",
-       "      <td>115</td>\n",
-       "      <td>381</td>\n",
-       "      <td>9628</td>\n",
-       "      <td>24183</td>\n",
-       "      <td>1359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C</td>\n",
-       "      <td>767</td>\n",
-       "      <td>2673</td>\n",
-       "      <td>70923</td>\n",
-       "      <td>163483</td>\n",
-       "      <td>12449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>D</td>\n",
-       "      <td>90</td>\n",
-       "      <td>282</td>\n",
-       "      <td>9683</td>\n",
-       "      <td>10370</td>\n",
-       "      <td>509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>E</td>\n",
-       "      <td>461</td>\n",
-       "      <td>1608</td>\n",
-       "      <td>40630</td>\n",
-       "      <td>99047</td>\n",
-       "      <td>3726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>F</td>\n",
-       "      <td>628</td>\n",
-       "      <td>2074</td>\n",
-       "      <td>47420</td>\n",
-       "      <td>128635</td>\n",
-       "      <td>9214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>G</td>\n",
-       "      <td>81</td>\n",
-       "      <td>75</td>\n",
-       "      <td>7115</td>\n",
-       "      <td>11962</td>\n",
-       "      <td>536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>I</td>\n",
-       "      <td>153</td>\n",
-       "      <td>458</td>\n",
-       "      <td>10177</td>\n",
-       "      <td>32436</td>\n",
-       "      <td>1462</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>J</td>\n",
-       "      <td>455</td>\n",
-       "      <td>1722</td>\n",
-       "      <td>29124</td>\n",
-       "      <td>83862</td>\n",
-       "      <td>6337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>K</td>\n",
-       "      <td>103</td>\n",
-       "      <td>400</td>\n",
-       "      <td>8987</td>\n",
-       "      <td>14618</td>\n",
-       "      <td>785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>L</td>\n",
-       "      <td>547</td>\n",
-       "      <td>1217</td>\n",
-       "      <td>34680</td>\n",
-       "      <td>99636</td>\n",
-       "      <td>6597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>M</td>\n",
-       "      <td>560</td>\n",
-       "      <td>2532</td>\n",
-       "      <td>51536</td>\n",
-       "      <td>135480</td>\n",
-       "      <td>10928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>N</td>\n",
-       "      <td>423</td>\n",
-       "      <td>1303</td>\n",
-       "      <td>32683</td>\n",
-       "      <td>74106</td>\n",
-       "      <td>4258</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   name  Aircraft  Fuel  Employee  Passenger  Freight\n",
-       "0     A       109   392      8259      23756      870\n",
-       "1     B       115   381      9628      24183     1359\n",
-       "2     C       767  2673     70923     163483    12449\n",
-       "3     D        90   282      9683      10370      509\n",
-       "4     E       461  1608     40630      99047     3726\n",
-       "5     F       628  2074     47420     128635     9214\n",
-       "6     G        81    75      7115      11962      536\n",
-       "7     I       153   458     10177      32436     1462\n",
-       "8     J       455  1722     29124      83862     6337\n",
-       "9     K       103   400      8987      14618      785\n",
-       "10    L       547  1217     34680      99636     6597\n",
-       "11    M       560  2532     51536     135480    10928\n",
-       "12    N       423  1303     32683      74106     4258"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "airline=pd.read_csv(\"airlines_data.csv\")\n",
     "airline"
@@ -913,6 +761,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59b0f779-fa22-4c99-9346-2e25aa80afbc",
+   "metadata": {},
+   "source": [
+    "Let me recover the names for each group of variables:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e157f107-913d-4877-b1a3-3bae3e0e93e9",
@@ -921,6 +777,14 @@
    "source": [
     "airlineInput=airline.columns[1:4].to_list()\n",
     "airlineOutput=airline.columns[4:6].to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b202766-484f-4b33-8cc4-235059540290",
+   "metadata": {},
+   "source": [
+    "Let's apply the function:"
    ]
   },
   {
@@ -940,51 +804,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e32467cf-2e43-4d22-92f9-3258d1a11c8d",
+   "cell_type": "markdown",
+   "id": "d7d42a32-693a-4c39-9153-588466d2df0f",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c17a4a4d-7f6a-438f-be27-21f157a67f84",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "VRS_in=pd.DataFrame()\n",
-    "vrs_in_names_output=['_'.join((a,'vrs_in_sl')) for a in airlineOutput]\n",
-    "vrs_in_names_input=['_'.join((a,'vrs_in_sl')) for a in airlineInput]\n",
-    "\n",
-    "VRS_in['vrs_in']=[r.score for r in dea_air_vrs_in.result]\n",
-    "VRS_in[vrs_in_names_input]=[[round(v,2) for v in r.x_slack] for r in dea_air_vrs_in.result]\n",
-    "VRS_in[vrs_in_names_output]=[[round(v,2) for v in r.y_slack] for r in dea_air_vrs_in.result]\n",
-    "VRS_in['efficient_vrs_in']=[r.is_efficient for r in dea_air_vrs_in.result]\n",
-    "VRS_in.set_index(airline.name,inplace=True)\n",
-    "VRS_in"
+    "Here is the result:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c4d1b2-2145-48bd-b917-1971cff0b9a3",
+   "id": "85a16e24-54fa-4558-a9b3-f0165c078a99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VRS_in.vrs_in"
+    "airline['vrs_in']=[r.score for r in dea_air_vrs_in.result]\n",
+    "airline.set_index(airline.name,inplace=True)\n",
+    "airline['vrs_in']"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec4d79c0-1d23-4836-8b2b-e6deeb98e291",
+   "cell_type": "markdown",
+   "id": "fb60762d-fdf7-4a0a-8565-faa149f3c55b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "airline['vrsin']=[r.score for r in dea_air_vrs_in.result]\n",
-    "airline"
+    "At this stage, you may be tempted to do a regression:"
    ]
   },
   {
@@ -1006,39 +850,11 @@
    "source": [
     "import numpy as np # linear algebra\n",
     "from py4etrics import tobit\n",
-    "import statsmodels.api as sm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe3a880a-358e-4cfa-a77a-e77a14d1b220",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(airline['vrsin']==1, 1, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb7aa00c-f2cd-4135-b436-cb79b8deae81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "airline.loc[:,'Aircraft':'Freight']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62453833-4481-4302-8d20-dd7d3a6757ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "airline['censored'] =np.where(airline['vrsin']==1, 1, 0)\n",
-    "cens = airline['censored']#.values\n",
-    "endog = airline.loc[:,'vrsin']\n",
+    "# import statsmodels.api as sm\n",
+    "\n",
+    "airline['censored'] =np.where(airline['vrs_in']==1, 1, 0)\n",
+    "cens = airline['censored']\n",
+    "endog = airline.loc[:,'vrs_in']\n",
     "exog = airline.loc[:,'Aircraft':'Freight']\n",
     "\n",
     "tobit_res = tobit.Tobit(endog, exog, cens,right=1).fit()\n",
@@ -1046,215 +862,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c5fb415-565e-465f-a614-1147f49e3ca1",
+   "cell_type": "markdown",
+   "id": "e58be274-861d-47a3-badf-007a73bd433c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "airline.to_csv('airline_all.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e3d4af0-fa20-4898-9ec6-e66312669931",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv(\"georgian_bay_secchi.csv\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da4075d4-9c1b-441c-a983-0f96c495af11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6830033b-3a3b-4512-a975-a87265244de9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.secchi[df.secchi.str.contains('>')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e575283d-f8e4-49ad-9fe9-8b9769d38a87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "df['censored'] = np.where(df['secchi'].astype('str').str.contains(\">\"), 1, 0)\n",
-    "df['secchi_depth'] = df['secchi'].astype(str).str.replace(r\"\\>\", \"\", regex=True).astype(\"float\")\n",
-    "df['intercept'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32818f9f-10dd-44f8-8c79-eea1ff358197",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cens = df['censored'].values\n",
-    "endog = df['secchi_depth']\n",
-    "exog = df[['intercept','alkalinity', 'chloride', 'carbon_organic', 'nitrogen', 'sulphate']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d6f8a06-281b-41f3-b51d-b423a2915a27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f66a3aa-d69a-46a0-84d1-af71f144c0ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "endog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "097b97c6-4e93-4c97-9b0f-c6a28edf5f04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47d2ce3d-c62b-40cf-b152-c19bf0d5b7ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from py4etrics import tobit\n",
-    "import statsmodels.api as sm\n",
-    "tobit_res = tobit.Tobit(endog, exog, cens).fit()\n",
-    "tobit_res.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b37ed4a9-5654-439b-9cb1-f77a6fc3b472",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
+    "<div class=\"alert-success\">\n",
     "\n",
-    "ranch=pd.read_excel(\"ranchChain.xlsx\",'data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a972eae0-5400-4a3d-8d04-a3a711d6995e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ranch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3d4e1dc-394b-4b47-bd57-65e588048a43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## installation\n",
-    "# !pip install Pyfrontier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8765e06a-c394-4452-9578-0b57bb5e4878",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Pyfrontier.frontier_model import EnvelopDEA\n",
+    "<strong>Exercise: Efficiency in Public sector</strong> \n",
     "\n",
-    "dea_ranch_vrs_in = EnvelopDEA(\"VRS\", \"in\")\n",
-    "dea_ranch_vrs_in_fit=dea_ranch_vrs_in .fit(\n",
-    "    inputs=ranch[['HoursOps',\t'FTE',\t'Supplies']].to_numpy(),\n",
-    "    outputs=ranch[['WeeklyProfit','MarketShare','GrowthRate']].to_numpy()\n",
-    ")"
+    "- Make a group of 2 people from this course.\n",
+    "- Find a set of municipalities (homogenity required).\n",
+    "- Find a set of common input and out variables for them.\n",
+    "- Compute efficiency."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f90831f-c280-437a-9875-ee25004e2be5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dea_ranch_vrs_in.result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f01c36e-6757-4906-8060-9bc5a7ac9853",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ranch['vrs_in']=[r.score for r in dea_ranch_vrs_in.result]\n",
-    "ranch[['HoursOps_vrs_in_sl','FTE_vrs_in_sl','Supplies_vrs_in_sl']]=[[round(v,2) for v in r.x_slack] for r in dea_ranch_vrs_in.result]\n",
-    "ranch[['WeeklyProfit_vrs_in_sl','MarketShare_vrs_in_sl','GrowthRate_vrs_in_sl']]=[[round(v,2) for v in r.y_slack] for r in dea_ranch_vrs_in.result]\n",
-    "ranch['WeeklyProfit']=[r.is_efficient for r in dea_ranch_vrs_in.result]\n",
-    "ranch.set_index('branch').loc[:,'vrs_in':]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129ba53b-5c77-4839-8d87-e59578af78c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import statsmodels.api as sm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03c77449-4b4d-4210-baac-59df36e7c890",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install statsmodels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88cdc61e-b4c3-4385-84d4-2125fc9e5d48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1273,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
